assembler/src/main/java/com/opensim51/assembler/mcs51/mcu8051/antlr/Asm8051Parser.java
package com.opensim51.assembler.mcs51.mcu8051.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Asm8051Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQU=1, SET=2, ORG=3, USING=4, DS=5, DB=6, DW=7, END=8, HIGH=9, LOW=10, 
		DOLLAR=11, SLASH=12, ASTERISK=13, PLUS=14, MINUS=15, LPAREN=16, RPAREN=17, 
		MOD=18, SHL=19, SHR=20, NOT=21, AND=22, OR=23, XOR=24, EQ=25, NE=26, LT=27, 
		LE=28, GT=29, GE=30, ACALL=31, ADD=32, ADDC=33, AJMP=34, ANL=35, CJNE=36, 
		CLR=37, CPL=38, DA=39, DEC=40, DIV=41, DJNZ=42, INC=43, JB=44, JBC=45, 
		JC=46, JMP=47, JNB=48, JNC=49, JNZ=50, JZ=51, LCALL=52, LJMP=53, MOV=54, 
		MOVC=55, MOVX=56, MUL=57, NOP=58, ORL=59, POP=60, PUSH=61, RET=62, RETI=63, 
		RL=64, RLC=65, RR=66, RRC=67, SETB=68, SJMP=69, SUBB=70, SWAP=71, XCH=72, 
		XCHD=73, XRL=74, P0=75, P1=76, P2=77, P3=78, SP=79, DPL=80, DPH=81, TL0=82, 
		TL1=83, TH0=84, TH1=85, SBUF=86, ACC=87, BCC=88, PCON=89, TCON=90, TMOD=91, 
		SCON=92, IE=93, IP=94, PSW=95, IDL=96, PD=97, GF0=98, GF1=99, SMOD=100, 
		IT0=101, IE0=102, IT1=103, IE1=104, TR0=105, TF0=106, TR1=107, TF1=108, 
		T0M0=109, T0M1=110, C_T0=111, GATE0=112, T1M0=113, T1M1=114, C_T1=115, 
		GATE1=116, R1=117, T1=118, RB8=119, TB8=120, REN=121, SM2=122, SM1=123, 
		SM0=124, EX0=125, ET0=126, EX1=127, ET1=128, ES=129, ET2=130, EA=131, 
		PX0=132, PT0=133, PX1=134, PT1=135, PS=136, PT2=137, PARITY=138, UD=139, 
		OV=140, RS0=141, RS1=142, FO=143, AC=144, CARRY=145, PORT_BIT=146, ACC_BIT=147, 
		B_BIT=148, PC=149, DPTR=150, AB=151, REGISTER=152, INDIRECT_REGISTER=153, 
		HASH=154, COLON=155, COMMA=156, DOT=157, AT=158, DECIMAL=159, HEXADECIMAL=160, 
		OCTAL=161, BINARY=162, SYMBOL=163, CHARACTER=164, STRING=165, COMMENT=166, 
		EOL=167, WS=168;
	public static final int
		RULE_source = 0, RULE_line = 1, RULE_directive = 2, RULE_org = 3, RULE_equ = 4, 
		RULE_set = 5, RULE_using = 6, RULE_ds = 7, RULE_db = 8, RULE_dw = 9, RULE_end = 10, 
		RULE_expression = 11, RULE_character = 12, RULE_dollar = 13, RULE_instruction = 14, 
		RULE_mnemonic = 15, RULE_acall = 16, RULE_add = 17, RULE_addc = 18, RULE_ajmp = 19, 
		RULE_anl = 20, RULE_cjne = 21, RULE_clr = 22, RULE_cpl = 23, RULE_da = 24, 
		RULE_dec = 25, RULE_div = 26, RULE_djnz = 27, RULE_inc = 28, RULE_jb = 29, 
		RULE_jbc = 30, RULE_jc = 31, RULE_jmp = 32, RULE_jnb = 33, RULE_jnc = 34, 
		RULE_jnz = 35, RULE_jz = 36, RULE_lcall = 37, RULE_ljmp = 38, RULE_mov = 39, 
		RULE_movc = 40, RULE_movx = 41, RULE_mul = 42, RULE_nop = 43, RULE_orl = 44, 
		RULE_pop = 45, RULE_push = 46, RULE_ret = 47, RULE_reti = 48, RULE_rl = 49, 
		RULE_rlc = 50, RULE_rr = 51, RULE_rrc = 52, RULE_setb = 53, RULE_sjmp = 54, 
		RULE_subb = 55, RULE_swap = 56, RULE_xch = 57, RULE_xchd = 58, RULE_xrl = 59, 
		RULE_label = 60, RULE_symbol = 61, RULE_comment = 62, RULE_direct = 63, 
		RULE_immediate = 64, RULE_number = 65, RULE_string = 66, RULE_indirectRegister = 67, 
		RULE_register = 68, RULE_accumulator = 69, RULE_sfr = 70, RULE_bit = 71, 
		RULE_notBit = 72, RULE_carry = 73, RULE_dptr = 74, RULE_atDptr = 75, RULE_atAPlusDptr = 76, 
		RULE_atAPlusPc = 77;
	public static final String[] ruleNames = {
		"source", "line", "directive", "org", "equ", "set", "using", "ds", "db", 
		"dw", "end", "expression", "character", "dollar", "instruction", "mnemonic", 
		"acall", "add", "addc", "ajmp", "anl", "cjne", "clr", "cpl", "da", "dec", 
		"div", "djnz", "inc", "jb", "jbc", "jc", "jmp", "jnb", "jnc", "jnz", "jz", 
		"lcall", "ljmp", "mov", "movc", "movx", "mul", "nop", "orl", "pop", "push", 
		"ret", "reti", "rl", "rlc", "rr", "rrc", "setb", "sjmp", "subb", "swap", 
		"xch", "xchd", "xrl", "label", "symbol", "comment", "direct", "immediate", 
		"number", "string", "indirectRegister", "register", "accumulator", "sfr", 
		"bit", "notBit", "carry", "dptr", "atDptr", "atAPlusDptr", "atAPlusPc"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "'$'", 
		"'/'", "'*'", "'+'", "'-'", "'('", "')'", null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'#'", 
		"':'", "','", "'.'", "'@'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQU", "SET", "ORG", "USING", "DS", "DB", "DW", "END", "HIGH", "LOW", 
		"DOLLAR", "SLASH", "ASTERISK", "PLUS", "MINUS", "LPAREN", "RPAREN", "MOD", 
		"SHL", "SHR", "NOT", "AND", "OR", "XOR", "EQ", "NE", "LT", "LE", "GT", 
		"GE", "ACALL", "ADD", "ADDC", "AJMP", "ANL", "CJNE", "CLR", "CPL", "DA", 
		"DEC", "DIV", "DJNZ", "INC", "JB", "JBC", "JC", "JMP", "JNB", "JNC", "JNZ", 
		"JZ", "LCALL", "LJMP", "MOV", "MOVC", "MOVX", "MUL", "NOP", "ORL", "POP", 
		"PUSH", "RET", "RETI", "RL", "RLC", "RR", "RRC", "SETB", "SJMP", "SUBB", 
		"SWAP", "XCH", "XCHD", "XRL", "P0", "P1", "P2", "P3", "SP", "DPL", "DPH", 
		"TL0", "TL1", "TH0", "TH1", "SBUF", "ACC", "BCC", "PCON", "TCON", "TMOD", 
		"SCON", "IE", "IP", "PSW", "IDL", "PD", "GF0", "GF1", "SMOD", "IT0", "IE0", 
		"IT1", "IE1", "TR0", "TF0", "TR1", "TF1", "T0M0", "T0M1", "C_T0", "GATE0", 
		"T1M0", "T1M1", "C_T1", "GATE1", "R1", "T1", "RB8", "TB8", "REN", "SM2", 
		"SM1", "SM0", "EX0", "ET0", "EX1", "ET1", "ES", "ET2", "EA", "PX0", "PT0", 
		"PX1", "PT1", "PS", "PT2", "PARITY", "UD", "OV", "RS0", "RS1", "FO", "AC", 
		"CARRY", "PORT_BIT", "ACC_BIT", "B_BIT", "PC", "DPTR", "AB", "REGISTER", 
		"INDIRECT_REGISTER", "HASH", "COLON", "COMMA", "DOT", "AT", "DECIMAL", 
		"HEXADECIMAL", "OCTAL", "BINARY", "SYMBOL", "CHARACTER", "STRING", "COMMENT", 
		"EOL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OpenSim51.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Asm8051Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SourceContext extends ParserRuleContext {
		public List<TerminalNode> EOL() { return getTokens(Asm8051Parser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(Asm8051Parser.EOL, i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Asm8051Visitor ) return ((Asm8051Visitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ORG) | (1L << USING) | (1L << END) | (1L << ACALL) | (1L << ADD) | (1L << ADDC) | (1L << AJMP) | (1L << ANL) | (1L << CJNE) | (1L << CLR) | (1L << CPL) | (1L << DA) | (1L << DEC) | (1L << DIV) | (1L << DJNZ) | (1L << INC) | (1L << JB) | (1L << JBC) | (1L << JC) | (1L << JMP) | (1L << JNB) | (1L << JNC) | (1L << JNZ) | (1L << JZ) | (1L << LCALL) | (1L << LJMP) | (1L << MOV) | (1L << MOVC) | (1L << MOVX) | (1L << MUL) | (1L << NOP) | (1L << ORL) | (1L << POP) | (1L << PUSH) | (1L << RET) | (1L << RETI))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (RL - 64)) | (1L << (RLC - 64)) | (1L << (RR - 64)) | (1L << (RRC - 64)) | (1L << (SETB - 64)) | (1L << (SJMP - 64)) | (1L << (SUBB - 64)) | (1L << (SWAP - 64)) | (1L << (XCH - 64)) | (1L << (XCHD - 64)) | (1L << (XRL - 64)))) != 0) || _la==SYMBOL || _la==COMMENT) {
					{
					setState(156);
					line();
					}
				}

				setState(159);
				match(EOL);
				}
				}
				setState(162); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ORG) | (1L << USING) | (1L << END) | (1L << ACALL) | (1L << ADD) | (1L << ADDC) | (1L << AJMP) | (1L << ANL) | (1L << CJNE) | (1L << CLR) | (1L << CPL) | (1L << DA) | (1L << DEC) | (1L << DIV) | (1L << DJNZ) | (1L << INC) | (1L << JB) | (1L << JBC) | (1L << JC) | (1L << JMP) | (1L << JNB) | (1L << JNC) | (1L << JNZ) | (1L << JZ) | (1L << LCALL) | (1L << LJMP) | (1L << MOV) | (1L << MOVC) | (1L << MOVX) | (1L << MUL) | (1L << NOP) | (1L << ORL) | (1L << POP) | (1L << PUSH) | (1L << RET) | (1L << RETI))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (RL - 64)) | (1L << (RLC - 64)) | (1L << (RR - 64)) | (1L << (RRC - 64)) | (1L << (SETB - 64)) | (1L << (SJMP - 64)) | (1L << (SUBB - 64)) | (1L << (SWAP - 64)) | (1L << (XCH - 64)) | (1L << (XCHD - 64)) | (1L << (XRL - 64)))) != 0) || ((((_la - 163)) & ~0x3f) == 0 && ((1L << (_la - 163)) & ((1L << (SYMBOL - 163)) | (1L << (COMMENT - 163)) | (1L << (EOL - 163)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Asm8051Visitor ) return ((Asm8051Visitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				label();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				directive();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(166);
				instruction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(167);
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public OrgContext org() {
			return getRuleContext(OrgContext.class,0);
		}
		public EquContext equ() {
			return getRuleContext(EquContext.class,0);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public UsingContext using() {
			return getRuleContext(UsingContext.class,0);
		}
		public DsContext ds() {
			return getRuleContext(DsContext.class,0);
		}
		public DbContext db() {
			return getRuleContext(DbContext.class,0);
		}
		public DwContext dw() {
			return getRuleContext(DwContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Asm8051Visitor ) return ((Asm8051Visitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(170);
				org();
				}
				break;
			case 2:
				{
				setState(171);
				equ();
				}
				break;
			case 3:
				{
				setState(172);
				set();
				}
				break;
			case 4:
				{
				setState(173);
				using();
				}
				break;
			case 5:
				{
				setState(174);
				ds();
				}
				break;
			case 6:
				{
				setState(175);
				db();
				}
				break;
			case 7:
				{
				setState(176);
				dw();
				}
				break;
			case 8:
				{
				setState(177);
				end();
				}
				break;
			}
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(180);
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrgContext extends ParserRuleContext {
		public TerminalNode ORG() { return getToken(Asm8051Parser.ORG, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_org; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).enterOrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Asm8051Listener ) ((Asm8051Listener)listener).exitOrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Asm8051Visitor ) return ((Asm8051Visitor<? extends T>)visitor).visitOrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrgContext org() throws RecognitionException {
		OrgContext _localctx = new OrgContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_org);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(ORG);
			setState(184);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
